TINY-4144: Fixed double border on sidebars

--- a/modules/oxide/src/less/theme/components/sidebar/sidebar.less
+++ b/modules/oxide/src/less/theme/components/sidebar/sidebar.less
@@ -10,7 +10,6 @@
 //
 
 @sidebar-background-color: @background-color;
-@sidebar-separator-color: @border-color;
 
 .tox {
   .tox-sidebar-wrap {
@@ -27,7 +26,6 @@
 
   .tox-sidebar {
     background-color: @sidebar-background-color;
-    border-top: 1px solid @sidebar-separator-color;
     display: flex;
     flex-direction: row;
     justify-content: flex-end;
